nivasa-macros/tests/trybuild/controller_use_filters_invalid_target.rs
use nivasa_macros::use_filters;

struct RequestScopedFilter;

#[use_filters(RequestScopedFilter)]
enum NotAController {}

fn main() {}
